test/classicalForget1.slq
x:=1;
def main(){
	forget(x); // error
}
